--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
     <h2>Contact</h2>
     <p>波紋を共に起こしたい方は、こちらから。</p>
     <div class="contact-links">
+      <a href="https://note.com/truth_wave">note</a>
       <a href="https://github.com/truthwave">GitHub</a>
       <a href="https://x.com/Truth__Wave">X</a>
     </div>
