--- a/English/index.html
+++ b/English/index.html
@@ -222,6 +222,7 @@
     <h2>Contact</h2>
     <p>Let’s create the next wave together.</p>
     <div class="contact-links">
+      <a href="https://note.com/truth_wave">note</a>
       <a href="https://github.com/truthwave/truthwave/blob/main/English/README.md">GitHub</a>
       <a href="https://x.com/Truth__Wave">X</a>
     </div>
