--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           </div>
 
           <div class="external-links">
-            <a href="https://coconala.com/contents_market/pictures/cmez6ftdz0sjh6m0h0xdbo1gs" target="_blank" rel="noopener noreferrer">▶ 商品ページを見る</a>
+            <a href="https://note.com/truth_wave/n/n61c5d3749404" target="_blank" rel="noopener noreferrer">▶ 商品ページを見る</a>
             <a href="https://github.com/truthwave/Buffett-Graham-GPTs" target="_blank" rel="noopener noreferrer">▶ GitHubで見る</a>
           </div>
         </article>
