--- a/English/index.html
+++ b/English/index.html
@@ -157,7 +157,7 @@
           </div>
 
           <div class="external-links">
-            <a href="https://coconala.com/contents_market/pictures/cmf3ndqpl00xr6s0houn6itv9" target="_blank" rel="noopener">▶ View product</a>
+            <a href="https://note.com/truth_wave/n/n61c5d3749404" target="_blank" rel="noopener">▶ View product</a>
             <a href="https://github.com/truthwave/mail-efficiency-gpts" target="_blank" rel="noopener">▶ GitHub</a>
           </div>
         </article>
