--- a/English/index.html
+++ b/English/index.html
@@ -119,7 +119,7 @@
           </div>
 
           <div class="external-links">
-            <a href="https://coconala.com/contents_market/pictures/cmez6ftdz0sjh6m0h0xdbo1gs" target="_blank" rel="noopener">▶ View product</a>
+            <a href="https://note.com/truth_wave/n/n92be6e1aca01" target="_blank" rel="noopener">▶ View product</a>
             <a href="https://github.com/truthwave/Buffett-Graham-GPTs" target="_blank" rel="noopener">▶ GitHub</a>
           </div>
         </article>
