--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   <!-- グローバルナビ（固定） -->
   <nav class="global-nav" aria-label="Primary">
     <a href="#philosophy">真理とは何か</a>
+    <a href="#lineup">商品ラインナップ</a>
     <a href="#projects">波紋の記録</a>
       <a href="#trust">信頼に基づく</a>
     <a href="#next-wave">次の波へ</a>
@@ -94,7 +95,144 @@
         </div>
       </div>
     </section>
+    
+ <section id="lineup" class="section lineup">
+      <h2>商品ラインナップ</h2>
+      <p>Truth Wave のGPT・ツールたちを、一枚の地図としてまとめました。<br>
+        気になるものから、静かに覗いてみてください。</p>
 
+      <div class="lineup-grid" aria-label="GPT / ツール一覧">
+        <article class="lineup-item">
+          <div class="lineup-header">
+            <span class="lineup-tag">投資</span>
+            <h3>バフェット＆グレアムGPTs</h3>
+          </div>
+          <p class="lineup-desc">
+            長期投資家のための思考パートナー。著名投資家の原則をなぞりながら、銘柄の「本質」に静かに焦点を合わせるGPTです。
+          </p>
+          <div class="lineup-meta">
+            <span>対象：バリュー投資家・長期投資家</span>
+          </div>
+          <div class="external-links">
+            <a href="https://note.com/truth_wave/n/n92be6e1aca01" target="_blank" rel="noopener noreferrer">商品ページ</a>
+            <a href="https://github.com/truthwave/Buffett-Graham-GPTs" target="_blank" rel="noopener noreferrer">GitHub</a>
+          </div>
+        </article>
+
+        <article class="lineup-item">
+          <div class="lineup-header">
+            <span class="lineup-tag">メール</span>
+            <h3>メール効率化GPT</h3>
+          </div>
+          <p class="lineup-desc">
+            定型文・返信案・トーン調整までを一気に下ごしらえ。受信箱に奪われていた時間を、静かな余白に戻すためのGPTです。
+          </p>
+          <div class="lineup-meta">
+            <span>対象：日常的にメール対応が多いビジネスパーソン</span>
+          </div>
+          <div class="external-links">
+            <a href="https://note.com/truth_wave/n/n61c5d3749404" target="_blank" rel="noopener noreferrer">商品ページ</a>
+          </div>
+        </article>
+
+        <article class="lineup-item">
+          <div class="lineup-header">
+            <span class="lineup-tag">デザイン</span>
+            <h3>スティーブ・ジョブズ デザインレビュアー</h3>
+          </div>
+          <p class="lineup-desc">
+            ジョブズ視点で、余計な装飾を削ぎ落とすためのレビュアーGPT。UI・コピー・構成を「本質に近づける」ためのフィードバックを返します。
+          </p>
+          <div class="lineup-meta">
+            <span>対象：LP・プロダクト・ポートフォリオを磨きたいクリエイター</span>
+          </div>
+          <div class="external-links">
+            <a href="https://note.com/truth_wave/n/nadf0f771f769" target="_blank" rel="noopener noreferrer">商品ページ</a>
+          </div>
+        </article>
+
+        <article class="lineup-item">
+          <div class="lineup-header">
+            <span class="lineup-tag">税務</span>
+            <h3>フリーランス確定申告・経費アドバイザーGPT</h3>
+          </div>
+          <p class="lineup-desc">
+            「これは経費になる？」という迷いを減らすための相談役GPT。専門家に聞く前の下書きとして、思考を整理するために使えます。
+          </p>
+          <div class="lineup-meta">
+            <span>対象：個人事業主・フリーランス</span>
+          </div>
+          <div class="external-links">
+            <a href="https://note.com/truth_wave/n/nff6385369a64" target="_blank" rel="noopener noreferrer">商品ページ</a>
+          </div>
+        </article>
+
+        <article class="lineup-item">
+          <div class="lineup-header">
+            <span class="lineup-tag">医療・介護</span>
+            <h3>医療・介護現場の記録文書自動生成アシスタント</h3>
+          </div>
+          <p class="lineup-desc">
+            ケース別サンプルとGPTを組み合わせて、記録文書の「書き出し」を軽くするツール。現場の言葉を保ちながら、文体を整えます。
+          </p>
+          <div class="lineup-meta">
+            <span>対象：医療・介護・福祉現場の記録担当者</span>
+          </div>
+          <div class="external-links">
+            <a href="https://note.com/truth_wave/n/n70245cb47531" target="_blank" rel="noopener noreferrer">商品ページ</a>
+          </div>
+        </article>
+
+        <article class="lineup-item">
+          <div class="lineup-header">
+            <span class="lineup-tag">自動化</span>
+            <h3>業務プロセス自動化アシスタント（ノーコード連携）</h3>
+          </div>
+          <p class="lineup-desc">
+            Make / Zapier / Notion / Slack をつなぐ前に、「設計図」を一緒に描くGPT。二重入力やコピペを減らすためのフロー設計を提案します。
+          </p>
+          <div class="lineup-meta">
+            <span>対象：ノーコードで業務改善したいチーム・個人</span>
+          </div>
+          <div class="external-links">
+            <a href="https://note.com/truth_wave/n/n231bb4192cae" target="_blank" rel="noopener noreferrer">商品ページ</a>
+          </div>
+        </article>
+
+        <article class="lineup-item">
+          <div class="lineup-header">
+            <span class="lineup-tag">研究</span>
+            <h3>科研費申請書作成GPT</h3>
+          </div>
+          <p class="lineup-desc">
+            目的・計画・意義の三拍子を整理し、読みやすい申請書へと整えるGPT。研究の価値が、審査員の机まで「まっすぐ届く」ことを目指します。
+          </p>
+          <div class="lineup-meta">
+            <span>対象：科研費申請を行う研究者</span>
+          </div>
+          <div class="external-links">
+            <a href="https://note.com/truth_wave/n/nc52a65f9bb28" target="_blank" rel="noopener noreferrer">商品ページ</a>
+          </div>
+        </article>
+
+        <article class="lineup-item">
+          <div class="lineup-header">
+            <span class="lineup-tag">議事録</span>
+            <h3>議事録らくらくGPT</h3>
+          </div>
+          <p class="lineup-desc">
+            会議メモを貼るだけで、要約・ToDo・共有文を一気に整えるGPT。会議後の「書く負担」を限りなく小さくするための道具です。
+          </p>
+          <div class="lineup-meta">
+            <span>対象：会議が多いチーム・個人</span>
+          </div>
+          <div class="external-links">
+            <a href="https://note.com/truth_wave/n/n6c821e4f934c" target="_blank" rel="noopener noreferrer">商品ページ</a>
+          </div>
+        </article>
+      </div>
+    </section>
+    
     <section id="projects" class="section">
       <h2>波紋の記録</h2>
       <p>本質に向き合い、仕組みを設計すると──<br>使う人の行動が変わり、その変化が波のように広がっていく。</p>
@@ -312,6 +450,10 @@
     });
   });
 </script>
+  
+<footer class="footer" role="contentinfo">
+    <p>&copy; 2025 Truth Wave. All rights reserved.</p>
+  </footer>
 
 </body>
 </html>
