--- a/English/index.html
+++ b/English/index.html
@@ -27,6 +27,7 @@
 
   <nav class="global-nav" aria-label="Primary">
     <a href="#philosophy">What is Truth?</a>
+    <a href="#lineup">Product Lineup</a>
     <a href="#projects">Ripples</a>
     <a href="#trust">Trust</a>
     <a href="#next-wave">Next Wave</a>
@@ -80,7 +81,142 @@
         </div>
       </div>
     </section>
+<section id="lineup" class="section lineup">
+      <h2>Product Lineup</h2>
+      <p>We've compiled Truth Wave's GPT tools into a single map.<br>
+        Feel free to quietly explore the ones that catch your interest.</p>
 
+      <div class="lineup-grid" aria-label="GPT / Tool List">
+        <article class="lineup-item">
+          <div class="lineup-header">
+           <span class="lineup-tag">Investment</span>
+            <h3>Buffett & Graham GPTs</h3>
+          </div>
+          <p class="lineup-desc">
+            A thinking partner for long-term investors. This GPT quietly focuses on the “essence” of stocks while following the principles of renowned investors.
+          </p>
+          <div class="lineup-meta">
+            <span>Target Audience: Value Investors & Long-Term Investors</span>
+          </div>
+          <div class="external-links">
+            <a href="https://note.com/truth_wave/n/n92be6e1aca01" target="_blank" rel="noopener noreferrer">Product Page</a>
+            <a href="https://github.com/truthwave/Buffett-Graham-GPTs" target="_blank" rel="noopener noreferrer">GitHub</a>
+          </div>
+        </article>
+
+        <article class="lineup-item">
+          <div class="lineup-header">
+            <span class="lineup-tag">Email</span>
+            <h3>Email Efficiency GPT</h3>
+          </div>
+          <p class="lineup-desc">
+            Prepare everything at once—from templates and reply drafts to tone adjustments. This GPT helps reclaim the time stolen by your inbox, restoring quiet breathing room.
+          </p>
+          <div class="lineup-meta">
+            <span>Target Audience: Business professionals who handle a high volume of daily emails</span>
+          </div>
+          <div class="external-links">
+            <a href="https://note.com/truth_wave/n/n61c5d3749404" target="_blank" rel="noopener noreferrer">Product Page</a>
+          </div>
+        </article>
+
+        <article class="lineup-item">
+          <div class="lineup-header">
+             <span class="lineup-tag">Design</span>
+            <h3>Steve Jobs Design Reviewer</h3>
+          </div>
+          <p class="lineup-desc">
+            A reviewer GPT that strips away unnecessary decoration from a Jobs perspective. Provides feedback to bring UI, copy, and structure “closer to the essence.”
+          </p>
+          <div class="lineup-meta">
+            <span>For: Creators looking to refine their landing pages, products, or portfolios</span>
+          </div>
+          <div class="external-links">
+            <a href="https://note.com/truth_wave/n/nadf0f771f769" target="_blank" rel="noopener noreferrer">Product Page</a>
+          </div>
+        </article>
+
+        <article class="lineup-item">
+          <div class="lineup-header">
+             <span class="lineup-tag">Tax</span>
+            <h3>Freelancer Tax Filing & Expense Advisor GPT</h3>
+          </div>
+          <p class="lineup-desc">
+            A GPT advisor to reduce uncertainty about expenses. Use it to organize your thoughts as a draft before consulting an expert.
+          </p>
+          <div class="lineup-meta">
+            <span>Target Audience: Sole Proprietors & Freelancers</span>
+          </div>
+          <div class="external-links">
+            <a href="https://note.com/truth_wave/n/nff6385369a64" target="_blank" rel="noopener noreferrer">Product Page</a>
+          </div>
+        </article>
+
+        <article class="lineup-item">
+          <div class="lineup-header">
+            <span class="lineup-tag">Healthcare & Nursing Care</span>
+            <h3>Automated Record Generation Assistant for Healthcare & Nursing Care Settings</h3>
+          </div>
+          <p class="lineup-desc">
+            A tool that combines case-specific samples with GPT to streamline the process of writing records. It refines the writing style while preserving the language used in the field.
+          </p>
+          <div class="lineup-meta">
+            <span>Target Audience: Documentation staff in healthcare, nursing care, and welfare settings</span>
+          </div>
+          <div class="external-links">
+            <a href="https://note.com/truth_wave/n/n70245cb47531" target="_blank" rel="noopener noreferrer">Product Page</a>
+          </div>
+        </article>
+
+        <article class="lineup-item">
+          <div class="lineup-header">
+             <span class="lineup-tag">Automation</span>
+            <h3>Business Process Automation Assistant (No-Code Integration)</h3>
+          </div>
+          <p class="lineup-desc">
+            A GPT that helps you draw the “blueprint” before connecting Make / Zapier / Notion / Slack. It proposes workflow designs to reduce double entry and copy-pasting.
+          </p>
+          <div class="lineup-meta">
+            <span>Target: Teams and individuals seeking no-code workflow improvements</span>
+          </div>
+          <div class="external-links">
+            <a href="https://note.com/truth_wave/n/n231bb4192cae" target="_blank" rel="noopener noreferrer">Product Page</a>
+          </div>
+        </article>
+
+        <article class="lineup-item">
+          <div class="lineup-header">
+            <span class="lineup-tag">Research</span>
+            <h3>Grant Application Drafting GPT</h3>
+          </div>
+          <p class="lineup-desc">
+            This GPT organizes the three key elements—purpose, plan, and significance—to craft a clear, readable application. It aims to ensure your research's value reaches reviewers' desks directly.
+          </p>
+          <div class="lineup-meta">
+            <span>Target Audience: Researchers applying for Grant-in-Aid for Scientific Research</span>
+          </div>
+          <div class="external-links">
+            <a href="https://note.com/truth_wave/n/nc52a65f9bb28" target="_blank" rel="noopener noreferrer">Product Page</a>
+          </div>
+        </article>
+
+        <article class="lineup-item">
+          <div class="lineup-header">
+            <span class="lineup-tag">Meeting Minutes</span>
+            <h3>Meeting Minutes Made Easy with GPT</h3>
+          </div>
+          <p class="lineup-desc">
+            Simply paste your meeting notes, and this GPT instantly organizes summaries, to-dos, and shared text. It's a tool designed to minimize the “writing burden” after meetings.
+          </p>
+          <div class="lineup-meta">
+            <span>Target: Teams and individuals with frequent meetings</span>
+          </div>
+          <div class="external-links">
+            <a href="https://note.com/truth_wave/n/n6c821e4f934c" target="_blank" rel="noopener noreferrer">Product Page</a>
+          </div>
+        </article>
+      </div>
+    </section>
     <section id="projects" class="section">
       <h2>Ripples — Records of Change</h2>
       <p>When we confront the essence and design the system, people change how they act — and that change spreads like waves.</p>
@@ -265,5 +401,10 @@
       d.addEventListener('click', (e) => { if (e.target === d) location.hash = '!'; });
     });
   </script>
+
+  <footer class="footer" role="contentinfo">
+    <p>&copy; 2025 Truth Wave. All rights reserved.</p>
+  </footer>
+  
 </body>
 </html>
