--- a/English/index.html
+++ b/English/index.html
@@ -354,8 +354,8 @@
     </section>
   </main>
 
-  <footer class="footer">
-    <h2>Contact</h2>
+ <section class="section" id="next-wave">
+    <h2>次の波へ</h2>
     <p>Let’s create the next wave together.</p>
     <div class="contact-links">
       <a href="https://note.com/truth_wave">note</a>
