--- a/English/index.html
+++ b/English/index.html
@@ -355,12 +355,12 @@
   </main>
 
  <section class="section" id="next-wave">
-    <h2>次の波へ</h2>
+    <h2>To the next wave</h2>
     <p>Let’s create the next wave together.</p>
     <div class="contact-links">
-      <a href="https://note.com/truth_wave">note</a>
+      <p align="center"><a href="https://note.com/truth_wave">note</a>
       <a href="https://github.com/truthwave/truthwave/blob/main/English/README.md">GitHub</a>
-      <a href="https://x.com/Truth__Wave">X</a>
+      <a href="https://x.com/Truth__Wave">X</a></p>
     </div>
     <blockquote>“We don’t just ship tools. We deliver resonance.”</blockquote>
   </footer>
