--- a/English/index.html
+++ b/English/index.html
@@ -360,9 +360,9 @@
     <div class="contact-links">
       <p align="center"><a href="https://note.com/truth_wave">note</a>
       <a href="https://github.com/truthwave/truthwave/blob/main/English/README.md">GitHub</a>
-      <a href="https://x.com/Truth__Wave">X</a></p>
+      <a href="https://x.com/Truth__Wave">X</a>
     </div>
-    <blockquote>“We don’t just ship tools. We deliver resonance.”</blockquote>
+    <blockquote>“We don’t just ship tools. We deliver resonance.”</blockquote></p>
   </footer>
 
   <div class="sticky-cta" role="complementary" aria-label="Floating action">
