--- a/English/index.html
+++ b/English/index.html
@@ -362,7 +362,7 @@
       <a href="https://github.com/truthwave/truthwave/blob/main/English/README.md">GitHub</a>
       <a href="https://x.com/Truth__Wave">X</a></p>
     </div>
-    <p align="center"><blockquote>“We don’t just ship tools. We deliver resonance.”</blockquote></p>
+    <blockquote><p align="center">“We don’t just ship tools. We deliver resonance.”</p></blockquote>
   </footer>
 
   <div class="sticky-cta" role="complementary" aria-label="Floating action">
