--- a/index.html
+++ b/index.html
@@ -391,15 +391,15 @@
     </section>
   </main>
 
-  <footer class="footer">
-    <h2>Contact</h2>
-    <p>波紋を共に起こしたい方は、こちらから。</p>
+  <section class="section" id="next-wave">
+    <h2>次の波へ</h2>
+    <p align="center">波紋を共に起こしたい方は、こちらから。</p>
     <div class="contact-links">
-      <a href="https://note.com/truth_wave">note</a>
+      <p align="center"><a href="https://note.com/truth_wave">note</a>
       <a href="https://github.com/truthwave">GitHub</a>
-      <a href="https://x.com/Truth__Wave">X</a>
+      <a href="https://x.com/Truth__Wave">X</a></p>
     </div>
-    <blockquote>“届けたいのは、仕組みじゃない。届くという体験そのものだ。”</blockquote>
+    <blockquote><p align="center">“届けたいのは、仕組みじゃない。届くという体験そのものだ。”</p></blockquote>
   </footer>
 
   <!-- 追従CTA（モバイルでは非表示）-->
