--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
   </main>
 
   <section class="section" id="next-wave">
-    <h2>次の波へ</h2>
+    <h2>コンタクト</h2>
     <p align="center">波紋を共に起こしたい方は、こちらから。</p>
     <div class="contact-links">
       <p align="center"><a href="https://note.com/truth_wave">note</a>
