--- a/index.html
+++ b/index.html
@@ -333,6 +333,36 @@
     
   <section class="section trust" id="trust" aria-labelledby="trust-title">
       <h2 id="trust-title">信頼に基づく</h2>
+    <h2>信頼に基づくものづくり</h2>
+      <p>Truth Waveは、小さくても<strong>「約束を守る」</strong>ことを最優先にしています。</p>
+      <ul class="trust-list">
+        <li>
+          <strong>❶ 情報の非対称性をつくらない</strong><br>
+          導入前に「できること・できないこと」を率直にお伝えします。AIの限界やリスクも含め、判断材料をすべて開示します。
+        </li>
+        <li>
+          <strong>❷ 現場の負担を増やさない</strong><br>
+          新しい仕組みを入れるとき、「誰かの余計な作業」が増えていないかを必ず確認します。運用できない自動化はつくりません。
+        </li>
+        <li>
+          <strong>❸ 長く使われるものだけを残す</strong><br>
+          一度きりの“映え”ではなく、数カ月〜数年使い続けられる仕組みだけを提案します。メンテナンスのしやすさも含めて設計します。
+        </li>
+      </ul>
+
+      <details class="accordion">
+        <summary class="accordion-summary">データの取り扱いについて</summary>
+        <div class="accordion-content">
+          <p>機密性の高いデータを扱う場合は、プロジェクトごとに以下を取り決めます。</p>
+          <ul>
+            <li>ログの保存有無・保存期間</li>
+            <li>取り扱う情報の範囲（匿名化・集計データのみ など）</li>
+            <li>利用する外部サービスと、そのプライバシーポリシー</li>
+          </ul>
+          <p>「安心して使えるかどうか」も、成果と同じくらい大切な要件だと考えています。</p>
+        </div>
+      </details>
+
         <button class="accordion-toggle"
           aria-expanded="false"
           aria-controls="acc-trust">
