--- a/index.html
+++ b/index.html
@@ -332,8 +332,7 @@
     </section>
     
   <section class="section trust" id="trust" aria-labelledby="trust-title">
-      <h2 id="trust-title">信頼に基づく</h2>
-    <h2>信頼に基づくものづくり</h2>
+      <h2 id="trust-title">信頼に基づくものづくり</h2>
       <p>Truth Waveは、小さくても<strong>「約束を守る」</strong>ことを最優先にしています。</p>
       <ul class="trust-list">
         <li>
