--- a/English/index.html
+++ b/English/index.html
@@ -311,7 +311,22 @@
     </section>
 
     <section class="section trust" id="trust" aria-labelledby="trust-title">
-      <h2 id="trust-title">Grounded in Trust</h2>
+       <h2 id="trust-title">Manufacturing Based on Trust</h2>
+      <p>Truth Wave prioritizes <strong>keeping our promises</strong> above all else, no matter how small. </p>
+      <ul class="trust-list">
+        <li>
+          <strong>❶ Eliminating Information Asymmetry</strong><br>
+          Before implementation, we candidly explain what is and isn't possible. We disclose all factors for your decision, including AI limitations and risks.
+        </li>
+        <li>
+          <strong>❷ We avoid increasing operational burdens</strong><br>
+          When introducing new systems, we always verify that no one's workload is unnecessarily increased. We never build automation that can't be effectively operated.
+        </li>
+        <li>
+          <strong>❸ Retain only what will be used long-term</strong><br>
+          We propose only systems that can be used continuously for months to years, not just for a one-time “showcase.” We design with ease of maintenance in mind.
+        </li>
+      </ul>
       <button class="accordion-toggle" aria-expanded="false" aria-controls="acc-trust">
         View certifications & tech stack
       </button>
