--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </svg>
           </div>
           <div class="concept-label">余白</div>
-          <div class="concept-hint" aria-hidden="true">迷わない</div>
+          <div class="concept-hint" aria-hidden="true">考えるための静けさ</div>
         </div>
         <div class="concept">
           <div class="icon icon--intuition" aria-hidden="true">
