--- a/English/index.html
+++ b/English/index.html
@@ -57,7 +57,7 @@
             </svg>
           </div>
           <div class="concept-label">Whitespace</div>
-          <div class="concept-hint" aria-hidden="true">No detours</div>
+          <div class="concept-hint" aria-hidden="true">Silence for thinking</div>
         </div>
          <div class="concept">
           <div class="icon icon--intuition" aria-hidden="true">
