--- a/index.html
+++ b/index.html
@@ -350,14 +350,14 @@
             <strong>Microsoft 認定：</strong>「生産性のための AI」
             <div class="trust-links">
               <a href="https://github.com/user-attachments/assets/f3350dbc-2491-4946-af0b-9e0959b85ba2" target="_blank" rel="noopener noreferrer">認定証</a> /
-              <a href="https://github.com/truthwave/ai-productivity-cert-practical-output" target="_blank" rel="noopener noreferrer">GitHub</a>
+              <a href="https://note.com/truth_wave/n/n81a4c164bb05" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>
           <li>
             <strong>PMI 認定：</strong>「倫理的AI原則」
             <div class="trust-links">
               <a href="https://github.com/user-attachments/assets/93110864-c74b-4615-994d-a08397d5c0df" target="_blank" rel="noopener noreferrer">認定証</a> /
-              <a href="https://github.com/truthwave/ethical-genai-practices" target="_blank" rel="noopener noreferrer">GitHub</a>
+              <a href="https://note.com/truth_wave/n/nd539c236b9ac" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>
           <li>
