--- a/index.html
+++ b/index.html
@@ -360,6 +360,13 @@
               <a href="https://note.com/truth_wave/n/nd539c236b9ac" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>
+           <li>
+            <strong>日本AIスキル認定協会:</strong>AIスキル検定初級
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/47243277-70ed-460a-85e1-daecc0ed9db3" target="_blank" rel="noopener noreferrer">認定証</a> /
+              <a href="https://note.com/truth_wave/n/na8dd3a8a02de" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
           <li>
             <strong>技術スタック：</strong> Next.js、Tailwind CSS、Supabase、OpenAI API、Vercel
           </li>
