--- a/index.html
+++ b/index.html
@@ -347,14 +347,14 @@
        aria-label="認定資格と技術スタック" hidden>
         <ul class="trust-list">
           <li>
-            <strong>Microsoft 認定：</strong>「生産性のための AI」
+            <strong>Microsoft 認定：</strong>生成AIを活用して生産性を高める
             <div class="trust-links">
               <a href="https://github.com/user-attachments/assets/f3350dbc-2491-4946-af0b-9e0959b85ba2" target="_blank" rel="noopener noreferrer">認定証</a> /
               <a href="https://note.com/truth_wave/n/n81a4c164bb05" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>
           <li>
-            <strong>PMI 認定：</strong>「倫理的AI原則」
+            <strong>PMI 認定：</strong>生成AI時代の倫理
             <div class="trust-links">
               <a href="https://github.com/user-attachments/assets/93110864-c74b-4615-994d-a08397d5c0df" target="_blank" rel="noopener noreferrer">認定証</a> /
               <a href="https://note.com/truth_wave/n/nd539c236b9ac" target="_blank" rel="noopener noreferrer">note</a>
@@ -370,7 +370,7 @@
             <li>
             <strong>Linkedin：</strong>AI時代に求められるヒューマンスキル
             <div class="trust-links">
-              <a href="https://github.com/user-attachments/assets/47243277-70ed-460a-85e1-daecc0ed9db3" target="_blank" rel="noopener noreferrer">認定証</a> /
+              <a href="https://github.com/user-attachments/assets/94f9ba0d-9c76-440b-beb7-475dc98bd5cd" target="_blank" rel="noopener noreferrer">認定証</a> /
               <a href="https://note.com/truth_wave/n/n525e4fbb9151" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>
