--- a/English/index.html
+++ b/English/index.html
@@ -321,12 +321,27 @@
       </button>
       <div id="acc-trust" class="accordion-content" role="region" aria-label="Certifications & Tech Stack" hidden>
         <ul class="trust-list">
-          <li><strong>Microsoft Certified:</strong> “AI for Productivity” — 
+          <li><strong>Microsoft Certified:</strong> Boost Productivity with Generative AI 
             <a href="https://github.com/user-attachments/assets/f3350dbc-2491-4946-af0b-9e0959b85ba2" target="_blank" rel="noopener">Certificate</a> /
             <a href="https://github.com/truthwave/ai-productivity-cert-practical-output/tree/main/English" target="_blank" rel="noopener">GitHub</a></li>
-          <li><strong>PMI Certified:</strong> “Ethical AI Principles” — 
+          <li><strong>PMI Certified:</strong>Ethics in the Generative AI Era
             <a href="https://github.com/user-attachments/assets/93110864-c74b-4615-994d-a08397d5c0df" target="_blank" rel="noopener">Certificate</a> /
             <a href="https://github.com/truthwave/ethical-genai-practices/tree/main/English" target="_blank" rel="noopener">GitHub</a></li>
+                     <li>
+            <strong>Japan AI Skills Certification Association:</strong> AI Skills Certification - Beginner Level
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/47243277-70ed-460a-85e1-daecc0ed9db3" target="_blank" rel="noopener noreferrer">Certificate</a> /
+              <a href="https://note.com/truth_wave/n/na8dd3a8a02de" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
+            <li>
+            <strong>LinkedIn:</strong> Human Skills Required in the AI Era
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/94f9ba0d-9c76-440b-beb7-475dc98bd5cd" target="_blank" rel="noopener noreferrer">Certificate</a> /
+              <a href="https://note.com/truth_wave/n/n525e4fbb9151" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
+
           <li><strong>Tech Stack:</strong> Next.js, Tailwind CSS, Supabase, OpenAI API, Vercel</li>
         </ul>
         <div class="external-links">
