--- a/English/index.html
+++ b/English/index.html
@@ -324,13 +324,13 @@
           <li><strong>Microsoft Certified:</strong> Boost Productivity with Generative AI 
             <div class="trust-links">
             <a href="https://github.com/user-attachments/assets/f3350dbc-2491-4946-af0b-9e0959b85ba2" target="_blank" rel="noopener">Certificate</a> /
-            <a href="https://github.com/truthwave/ai-productivity-cert-practical-output/tree/main/English" target="_blank" rel="noopener">GitHub</a></li>
-           </div>
+            <a href="https://github.com/truthwave/ai-productivity-cert-practical-output/tree/main/English" target="_blank" rel="noopener">GitHub</a>
+           </div></li>
           <li><strong>PMI Certified:</strong>Ethics in the Generative AI Era
             <div class="trust-links">
             <a href="https://github.com/user-attachments/assets/93110864-c74b-4615-994d-a08397d5c0df" target="_blank" rel="noopener">Certificate</a> /
-            <a href="https://github.com/truthwave/ethical-genai-practices/tree/main/English" target="_blank" rel="noopener">GitHub</a></li>
-            </div> 
+            <a href="https://github.com/truthwave/ethical-genai-practices/tree/main/English" target="_blank" rel="noopener">GitHub</a>
+            </div> </li>
       　　　<li>
             <strong>Japan AI Skills Certification Association:</strong> AI Skills Certification - Beginner Level
             <div class="trust-links">
