Fix formatting of list items in index.html

--- a/English/index.html
+++ b/English/index.html
@@ -331,15 +331,13 @@
             <a href="https://github.com/user-attachments/assets/93110864-c74b-4615-994d-a08397d5c0df" target="_blank" rel="noopener">Certificate</a> /
             <a href="https://github.com/truthwave/ethical-genai-practices/tree/main/English" target="_blank" rel="noopener">GitHub</a>
             </div> </li>
-      　　　<li>
-            <strong>Japan AI Skills Certification Association:</strong> AI Skills Certification - Beginner Level
+      　　　<li><strong>Japan AI Skills Certification Association:</strong> AI Skills Certification - Beginner Level
             <div class="trust-links">
               <a href="https://github.com/user-attachments/assets/47243277-70ed-460a-85e1-daecc0ed9db3" target="_blank" rel="noopener noreferrer">Certificate</a> /
               <a href="https://note.com/truth_wave/n/na8dd3a8a02de" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>
-            <li>
-            <strong>LinkedIn:</strong> Human Skills Required in the AI Era
+            <li><strong>LinkedIn:</strong> Human Skills Required in the AI Era
             <div class="trust-links">
               <a href="https://github.com/user-attachments/assets/94f9ba0d-9c76-440b-beb7-475dc98bd5cd" target="_blank" rel="noopener noreferrer">Certificate</a> /
               <a href="https://note.com/truth_wave/n/n525e4fbb9151" target="_blank" rel="noopener noreferrer">note</a>
