--- a/English/index.html
+++ b/English/index.html
@@ -325,12 +325,14 @@
             <div class="trust-links">
             <a href="https://github.com/user-attachments/assets/f3350dbc-2491-4946-af0b-9e0959b85ba2" target="_blank" rel="noopener">Certificate</a> /
             <a href="https://github.com/truthwave/ai-productivity-cert-practical-output/tree/main/English" target="_blank" rel="noopener">GitHub</a>
-           </div></li>
+           </div>
+          </li>
           <li><strong>PMI Certified:</strong>Ethics in the Generative AI Era
             <div class="trust-links">
             <a href="https://github.com/user-attachments/assets/93110864-c74b-4615-994d-a08397d5c0df" target="_blank" rel="noopener">Certificate</a> /
             <a href="https://github.com/truthwave/ethical-genai-practices/tree/main/English" target="_blank" rel="noopener">GitHub</a>
-            </div> </li>
+            </div>
+          </li>
       　　　<li><strong>Japan AI Skills Certification Association:</strong> AI Skills Certification - Beginner Level
             <div class="trust-links">
               <a href="https://github.com/user-attachments/assets/47243277-70ed-460a-85e1-daecc0ed9db3" target="_blank" rel="noopener noreferrer">Certificate</a> /
