Add LinkedIn section with certification and note links

--- a/index.html
+++ b/index.html
@@ -375,6 +375,13 @@
             </div>
           </li>
           <li>
+            <strong>Linkedin：</strong>AI時代に必要な適応力を身につける
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/47243277-70ed-460a-85e1-daecc0ed9db3" target="_blank" rel="noopener noreferrer">認定証</a> /
+              <a href="https://note.com/truth_wave/n/ne46e31ba0845" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
+          <li>
             <strong>技術スタック：</strong> Next.js、Tailwind CSS、Supabase、OpenAI API、Vercel
           </li>
         </ul>
