Add Microsoft certification section to index.html

--- a/index.html
+++ b/index.html
@@ -382,6 +382,13 @@
             </div>
           </li>
           <li>
+            <li>
+            <strong>Microsoft 認定：</strong>生成AIの基礎知識
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/18d93f10-7500-4408-b610-524a3ecd5760" target="_blank" rel="noopener noreferrer">認定証</a> /
+              <a href="https://note.com/truth_wave/n/n1f31dd49129b" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
             <strong>技術スタック：</strong> Next.js、Tailwind CSS、Supabase、OpenAI API、Vercel
           </li>
         </ul>
