Add PMI certification information to index.html

--- a/index.html
+++ b/index.html
@@ -389,6 +389,13 @@
               <a href="https://note.com/truth_wave/n/n1f31dd49129b" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>
+          <li>
+            <strong>PMI 認定：</strong>生成AIでコミュニケーションスキルを強化する
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/fa827f43-bd5b-4561-a44e-54b6242c8c6d" target="_blank" rel="noopener noreferrer">認定証</a> /
+              <a href="https://note.com/truth_wave/n/ne2df0d2749e8" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
             <strong>技術スタック：</strong> Next.js、Tailwind CSS、Supabase、OpenAI API、Vercel
           </li>
         </ul>
