--- a/index.html
+++ b/index.html
@@ -361,21 +361,21 @@
             </div>
           </li>
            <li>
-            <strong>日本AIスキル認定協会：</strong>AIスキル検定初級
+            <strong>日本AIスキル認定協会 認定：</strong>AIスキル検定初級
             <div class="trust-links">
               <a href="https://github.com/user-attachments/assets/47243277-70ed-460a-85e1-daecc0ed9db3" target="_blank" rel="noopener noreferrer">認定証</a> /
               <a href="https://note.com/truth_wave/n/na8dd3a8a02de" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>
             <li>
-            <strong>Linkedin：</strong>AI時代に求められるヒューマンスキル
+            <strong>Linkedin 認定：</strong>AI時代に求められるヒューマンスキル
             <div class="trust-links">
               <a href="https://github.com/user-attachments/assets/94f9ba0d-9c76-440b-beb7-475dc98bd5cd" target="_blank" rel="noopener noreferrer">認定証</a> /
               <a href="https://note.com/truth_wave/n/n525e4fbb9151" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>
           <li>
-            <strong>Linkedin：</strong>AI時代に必要な適応力を身につける
+            <strong>Linkedin 認定：</strong>AI時代に必要な適応力を身につける
             <div class="trust-links">
               <a href="https://github.com/user-attachments/assets/daec0f34-d4ae-4930-8207-5fbabfd47213" target="_blank" rel="noopener noreferrer">認定証</a> /
               <a href="https://note.com/truth_wave/n/ne46e31ba0845" target="_blank" rel="noopener noreferrer">note</a>
