--- a/index.html
+++ b/index.html
@@ -396,6 +396,13 @@
               <a href="https://note.com/truth_wave/n/ne2df0d2749e8" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>
+          <li>
+            <strong>Linledin 認定：</strong>AI時代に社会的知性を発揮する
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/c969925a-51bc-4f37-9697-12904eec5ee8" target="_blank" rel="noopener noreferrer">認定証</a> /
+              <a href="https://note.com/truth_wave/n/nf5f639c9a77e" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>   
             <strong>技術スタック：</strong> Next.js、Tailwind CSS、Supabase、OpenAI API、Vercel
           </li>
         </ul>
