--- a/index.html
+++ b/index.html
@@ -403,6 +403,13 @@
               <a href="https://note.com/truth_wave/n/nf5f639c9a77e" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>   
+          <li>
+            <strong>Linledin 認定：</strong>生成AIでクリティカルシンキングを鍛える
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/586d431e-74b7-4c89-884a-9b72c3b7fc3a" target="_blank" rel="noopener noreferrer">認定証</a> /
+              <a href="https://note.com/truth_wave/n/n620fbd1a4726" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
             <strong>技術スタック：</strong> Next.js、Tailwind CSS、Supabase、OpenAI API、Vercel
           </li>
         </ul>
