--- a/index.html
+++ b/index.html
@@ -410,6 +410,14 @@
               <a href="https://note.com/truth_wave/n/n620fbd1a4726" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>
+          <li>
+            <strong>Linledin 認定：</strong>生成AIで意思決定力を強化する
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/c6c6c651-a4f1-4667-ab09-4eef05545b40" target="_blank" rel="noopener noreferrer">認定証</a> /
+              <a href="https://note.com/truth_wave/n/na258ebc74d66" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
+
             <strong>技術スタック：</strong> Next.js、Tailwind CSS、Supabase、OpenAI API、Vercel
           </li>
         </ul>
