--- a/index.html
+++ b/index.html
@@ -417,7 +417,13 @@
               <a href="https://note.com/truth_wave/n/na258ebc74d66" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>
-
+          <li>
+            <strong>Linledin 認定：</strong>生成AIをクリエイティブ制作にとり入れるには
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/8ffc4194-3459-4246-b174-e7f60bbdc656" target="_blank" rel="noopener noreferrer">認定証</a> /
+              <a href="https://note.com/truth_wave/n/n4e1ae7cb168a" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
             <strong>技術スタック：</strong> Next.js、Tailwind CSS、Supabase、OpenAI API、Vercel
           </li>
         </ul>
