--- a/index.html
+++ b/index.html
@@ -424,6 +424,13 @@
               <a href="https://note.com/truth_wave/n/n4e1ae7cb168a" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>
+          <li>
+            <strong>Microsoft 認定：</strong>生成 AI とエージェントの概要
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/25edf4b7-3495-46e7-b193-34e234097e37" target="_blank" rel="noopener noreferrer">認定証</a> /
+              <a href="https://note.com/truth_wave/n/n9ec697ac6803" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
             <strong>技術スタック：</strong> Next.js、Tailwind CSS、Supabase、OpenAI API、Vercel
           </li>
         </ul>
