--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
             </div>
           </li>
           <li>
-            <strong>Microsoft 認定：</strong>生成 AI とエージェントの概要
+            <strong>Microsoft 認定：</strong>AI時代のヒューマンスキル
             <div class="trust-links">
               <a href="https://github.com/user-attachments/assets/25edf4b7-3495-46e7-b193-34e234097e37" target="_blank" rel="noopener noreferrer">認定証</a> /
               <a href="https://note.com/truth_wave/n/n9ec697ac6803" target="_blank" rel="noopener noreferrer">note</a>
