--- a/index.html
+++ b/index.html
@@ -431,6 +431,13 @@
               <a href="https://note.com/truth_wave/n/n9ec697ac6803" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>
+          <li>
+            <strong>Linledin 認定：</strong>１分で学ぶ：ChatGPTの便利技BEST 10
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/dd026304-87a8-4dd6-a82f-2fe03adac415" target="_blank" rel="noopener noreferrer">認定証</a> /
+              <a href="https://note.com/truth_wave/n/n6a367aea007b" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
             <strong>技術スタック：</strong> Next.js、Tailwind CSS、Supabase、OpenAI API、Vercel
           </li>
         </ul>
