--- a/index.html
+++ b/index.html
@@ -437,6 +437,13 @@
               <a href="https://github.com/user-attachments/assets/dd026304-87a8-4dd6-a82f-2fe03adac415" target="_blank" rel="noopener noreferrer">認定証</a> /
               <a href="https://note.com/truth_wave/n/n6a367aea007b" target="_blank" rel="noopener noreferrer">note</a>
             </div>
+          <li>
+            <strong>PMI 認定：</strong>生成AIをビジネス戦略に組み込む
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/8c1d5ea8-f82f-468f-8c41-3b2e0b49e3a3" target="_blank" rel="noopener noreferrer">認定証</a> /
+              <a href="https://note.com/truth_wave/n/n9137557d385e" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
           </li>
             <strong>技術スタック：</strong> Next.js、Tailwind CSS、Supabase、OpenAI API、Vercel
           </li>
