--- a/index.html
+++ b/index.html
@@ -437,6 +437,7 @@
               <a href="https://github.com/user-attachments/assets/dd026304-87a8-4dd6-a82f-2fe03adac415" target="_blank" rel="noopener noreferrer">認定証</a> /
               <a href="https://note.com/truth_wave/n/n6a367aea007b" target="_blank" rel="noopener noreferrer">note</a>
             </div>
+          </li>
           <li>
             <strong>PMI 認定：</strong>生成AIをビジネス戦略に組み込む
             <div class="trust-links">
@@ -444,7 +445,14 @@
               <a href="https://note.com/truth_wave/n/n9137557d385e" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>
+          <li>
+            <strong>PMI 認定：</strong>ビジネスリーダーのための生成AI
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/93a532d4-60b6-461b-b4f4-2efd62fc75e3" target="_blank" rel="noopener noreferrer">認定証</a> /
+              <a href="" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
           </li>
+
             <strong>技術スタック：</strong> Next.js、Tailwind CSS、Supabase、OpenAI API、Vercel
           </li>
         </ul>
