--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
             <strong>PMI 認定：</strong>ビジネスリーダーのための生成AI
             <div class="trust-links">
               <a href="https://github.com/user-attachments/assets/93a532d4-60b6-461b-b4f4-2efd62fc75e3" target="_blank" rel="noopener noreferrer">認定証</a> /
-              <a href="" target="_blank" rel="noopener noreferrer">note</a>
+              <a href="https://note.com/truth_wave/n/nc8e2754b7ffc" target="_blank" rel="noopener noreferrer">note</a>
             </div>
           </li>
           <li>
