--- a/index.html
+++ b/index.html
@@ -452,6 +452,13 @@
             </div>
           </li>
           <li>
+            <strong>PMI 認定：</strong>AIイノベーションの最先端を行くチームを作る
+            <div class="trust-links">
+              <a href="https://github.com/user-attachments/assets/664fb368-db83-466e-ba5b-f187defc927d" target="_blank" rel="noopener noreferrer">認定証</a> /
+              <a href="https://note.com/truth_wave/n/n1ce92e55e49c" target="_blank" rel="noopener noreferrer">note</a>
+            </div>
+          </li>
+          <li>
             <strong>技術スタック：</strong> Next.js、Tailwind CSS、Supabase、OpenAI API、Vercel
           </li>
         </ul>
